# JustSudoku

./: .gitignore  .travis.yml  JustSudoku.cabal  LICENSE  README.md  base.cc  configure.ac  controller.hs  data.hs  easy1.sfile  justsudoku.cabal  model.hs  report.html  stack.yaml  sudoku-linux.cabal
gamefiles/: easy1.sfile  easy1.solution
src/: Board.hs  Controller.hs  Flag.hs  GUI.hs  Main.hs  Move.hs  Parse.hs  SudokuBoard.hs  View.hs  controller.cpp  controller.h  controller.hs  gtkTest.hs  model.cpp  model.h  sudoku.cc  sudoku.cpp  sudokuGen  sudokuGen.hs  window.cpp  window.h
src/Sudoku/Control/: Flag.hs  Move.hs  Parse.hs
src/Sudoku/Control/Move/: Internal.hs
src/Sudoku/Data/: Board.hs
src/Sudoku/Data/Board/: Internal.hs
src/Sudoku/GTK/: GUI.hs
src/Sudoku/Generation/: Solve.hs
src/Util/: Other.hs
test/Sudoku/Control/: FlagSpec.hs  MoveSpec.hs  ParseSpec.hs
test/Sudoku/Data/: BoardSpec.hs
test/Util/: OtherSpec.hs
