name:               JustSudoku
version:            0.8.0.0
synopsis:           GTK+/Terminal Haskell Sudoku app
homepage:           https://www.github.com/andrewmichaud/JustSudoku.git
license:            BSD3
license-file:       LICENSE
author:             Andrew Michaud
maintainer:         andrewjmichaud@gmail.com
category:           Game
build-type:         Simple
extra-source-files: README.md
cabal-version:      >= 1.10

executable JustSudoku
    main-is:          Main.hs
    build-depends:    base >= 4.7, mtl >= 2.2
    hs-source-dirs:   src
    default-language: Haskell2010

library
    hs-source-dirs:   src
    exposed-modules:  Util.Other
    build-depends:    base >= 4.7
    default-language: Haskell2010

test-suite spec
    type:             exitcode-stdio-1.0
    ghc-options:      -Wall -O
    hs-source-dirs:   test
    main-is:          Spec.hs
    build-depends:    base >= 4.7, JustSudoku, hspec >= 2.0
    default-language: Haskell2010
