name:               JustSudoku
version:            0.8.0.0
synopsis:           GTK+/Terminal Haskell Sudoku app
homepage:           https://www.github.com/alixnovosi/JustSudoku.git
license:            BSD3
license-file:       LICENSE
author:             Andrew Michaud
maintainer:         dev@drew.life
category:           Game
build-type:         Simple
extra-source-files: README.md
cabal-version:      >= 1.22

executable JustSudoku
    main-is:          Main.hs
    build-depends:    base >= 4.7, mtl >= 2.2, containers >= 0.5.5.1
    hs-source-dirs:   src
    default-language: Haskell2010

library
    hs-source-dirs:   src
    exposed-modules:  Util.Other, Sudoku.Control.Move, Sudoku.Control.Parse,
                      Sudoku.Data.Board.Internal
    build-depends:    base >= 4.7, mtl >= 2.2, containers >= 0.5.5.1
    default-language: Haskell2010

test-suite spec
    type:             exitcode-stdio-1.0
    ghc-options:      -Wall -O
    hs-source-dirs:   test
    main-is:          Spec.hs
    build-depends:    base >= 4.7, containers >= 0.5.5.1, JustSudoku, hspec >= 2.0
    default-language: Haskell2010
